--- a/styly.css
+++ b/styly.css
@@ -19,13 +19,15 @@ header {
     background-attachment: fixed;
 }
 
+.heading-photo {
+    display: flex;
+    justify-content: center;
+    height: 140px;
+    align-items: center;
+}
 
 .heading-photo img {
     width: 285px;
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    top: 65px;
 }
 
 .nav-bar-lists {
@@ -35,8 +37,7 @@ header {
     list-style: none;
     gap: 20px;
     width: 100%;
-    position: absolute;
-    top: 120px;
+    margin: 0 0 20px 0;
 }
 
 .nav-bar-list a:visited,
@@ -64,10 +65,19 @@ header {
     transition: all 0.3s;
 }
 
-
-.secret-back {
-    height: 180px;
-    background: transparent;
+#main-heading {
+    color: #fff;
+    text-transform: uppercase;
+    position: relative;
+    top: 150px;
+    /* left: 50%;
+    transform: translate(-50%, -50%); */
+}
+.hr-red-heading hr {
+    margin: 0;
+    background-color: #b91f33;
+    height: 2px;
+    border: none;
 }
 
 .hr-red hr {
@@ -103,8 +113,9 @@ header {
     font-size: 32px;
 }
 
+
 .partners {
-    margin-top: 20px;
+    
 }
 
 .partners-photos {
@@ -115,7 +126,15 @@ header {
 
 .partners-photos img {
     margin: 17px;
+    border-bottom: 2px transparent #b91f33;
 }
+.partners-photos img:hover {
+    border-bottom: 2px solid #b91f33;
+    padding-bottom: 10px;
+    margin-bottom: 7px;
+    transition: all 0.3s;
+}
+
 
 /* MAIN */
 .pricing-empty-space {
@@ -137,8 +156,6 @@ header {
     transition: background-color 0.5s;
 }
 .price-box:hover {
-    border-top-left-radius: 20px;
-    border-bottom-left-radius: 20px;
     background: #b91f33;
     transition: background-color 0.5s;
 }
@@ -160,8 +177,9 @@ header {
 
 
 .sharpContact-box {
+    display: flex;
+    flex-direction: column;
     width: 50%;
-    height: 447.64px;
 }
 
 .sharp-box, .contact-box {
@@ -206,16 +224,6 @@ header {
     background-color: #fff;
     transition:  background-color 0.5s;
 }
-
-
-
-
-
-
-
-
-
-
 
 
 .contact-box .list-contact, .sharp-box .list-opening-time, .sharp-box p {
