--- a/styly.css
+++ b/styly.css
@@ -70,8 +70,9 @@ header {
     text-transform: uppercase;
     position: relative;
     top: 150px;
-    /* left: 50%;
-    transform: translate(-50%, -50%); */
+    letter-spacing: 1.8px;
+    word-spacing: 1.5px;
+    line-height: 1.8;
 }
 .hr-red-heading hr {
     margin: 0;
@@ -112,7 +113,10 @@ header {
     text-transform: uppercase;
     font-size: 32px;
 }
-
+.bold-letters {
+    text-decoration: underline;
+    text-decoration-color: #b91f33;
+}
 
 .partners {
     
@@ -126,6 +130,7 @@ header {
 
 .partners-photos img {
     margin: 17px;
+    height: 60px;
     border-bottom: 2px transparent #b91f33;
 }
 .partners-photos img:hover {
@@ -133,6 +138,7 @@ header {
     padding-bottom: 10px;
     margin-bottom: 7px;
     transition: all 0.3s;
+    cursor: pointer;
 }
 
 
@@ -180,6 +186,7 @@ header {
     display: flex;
     flex-direction: column;
     width: 50%;
+    
 }
 
 .sharp-box, .contact-box {
