--- a/queries.css
+++ b/queries.css
@@ -65,7 +65,7 @@
         top: 80px;
         left: 50px;
         line-height: 1.5;
-        transition: all 0.5;
+        transition: all 0.5s;
         max-height: 0;
     }
 
