--- a/styly.css
+++ b/styly.css
@@ -6,6 +6,12 @@ body, html {
     font-family: "Open Sans", sans-serif;
 }
 
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 .row {
     width: 80%;
     margin: 0 auto;
